# Skycock

./: .pre-commit-config.yaml  LICENSE  README.md  manage.py  pyproject.toml
backend/: apis.py  app.py  auth.py  db.py  models.py  wsgi.py
backend/app/: apis.py
backend/app/common/: entity.py  utils.py
backend/app/match/: api.py
backend/app/matches/: apis.py
backend/app/matches/entities/event/: event.py
backend/app/member/: apis.py
backend/app/model/: constants.py  match.py  member.py
backend/app/model/DTO/: event.py  match.py  member.py
backend/app/model/entities/event/: event.py  regular_event.py
backend/app/model/entities/member/: member.py
backend/apps/: apis.py  auth.py
backend/apps/match/: apis.py  match_maker.py
backend/apps/member/: apis.py
backend/apps/model/DTO/: event.py  match.py  member.py
backend/apps/model/entities/: entity.py
backend/apps/model/entities/event/: event.py  regular_event.py
backend/apps/model/entities/match/: match.py
backend/apps/model/entities/member/: member.py
skycock/: asgi.py  settings.py  urls.py  wsgi.py
