[tool.poetry]
name = "skycock"
version = "0.1.0"
description = ""
authors = ["Gorong <lozente@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
django-shell-plus = "^1.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
